dog pics are looking better-- still issues with spacing

--- a/src/assets/styles/components/bubble.module.scss
+++ b/src/assets/styles/components/bubble.module.scss
@@ -1,14 +1,6 @@
 @import '../globals';
 
 .chat {
-  // background: $background;
-  // display: flex;
-  // flex-flow: column nowrap;
-  // justify-content: space-evenly;
-  // align-content: center;
-  // padding: 0.6875rem 0;
-  // margin: 0 .5rem;
-  // border-radius: 20px 20px 6px 6px;
 
   div {
     font-size: 0.5rem;
@@ -23,10 +15,6 @@
     background: hsl(276, 41%, 93%);
     float: left;
     border-radius: 0.25rem 0.625rem 0.625rem 0.625rem;
-  }
-
-  .photos {
-    
   }
   
   .customer {
